# chess-visor

./: .gitignore  README.md  main.py  pyproject.toml
chess_visor/: __init__.py  analysis.py  game_state.py  observation.py  overlay.py  settings.py  tile_classification.py  utility.py  visor.py
style/: gui.qss
tile_classifier/model/: keras_metadata.pb  saved_model.pb
tile_classifier/model/variables/: variables.index
tile_classifier/training/: meta.toml
